fix: hide subreddits scrollbar in desktop view

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ a:hover {
     display: block;
     position: static;
     max-width: 100%;
+    overflow: hidden;
   }
 }
 
